--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular2": "2.0.0-beta.15",
     "bootstrap": "^3.3.6",
     "es6-shim": "^0.35.0",
+    "ng2-charts": "^1.0.3",
     "ng2-material": "^0.3.7",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
