--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
-    "typings": "typings",
+    "typings": "typings install",
     "webdriver:update": "webdriver-manager update"
   },
   "keywords": [],
