--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
   "dependencies": {
     "a2-in-memory-web-api": "^0.1.17",
     "angular2": "2.0.0-beta.15",
+    "body-parser": "^1.15.1",
     "bootstrap": "^3.3.6",
+    "cookie-parser": "^1.4.1",
     "es6-shim": "^0.35.0",
+    "express": "^4.13.4",
     "lodash": "^4.12.0",
+    "morgan": "^1.7.0",
     "ng2-charts": "^1.0.3",
     "ng2-material": "^0.3.7",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
+    "serve-favicon": "^2.3.0",
     "systemjs": "0.19.26",
     "zone.js": "^0.6.12"
   },
