--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "angular2-appcheck",
   "version": "1.0.0",
-  "description": "Toy project that displays version information of dummy applications using Angular 2 and ng2-material",
+  "description": "Pet project that displays information of dummy applications and databases using Angular 2, ng2-material, ng2-charts.",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
+    "start": "tsc && concurrently \"tsc -w \" \"lite-server\" ",
     "docker-build": "docker build -t ng2-quickstart .",
     "docker": "npm run docker-build && docker run -it --rm -p 3000:3000 -p 3001:3001 ng2-quickstart",
     "e2e": "tsc && concurrently \"http-server\" \"protractor protractor.config.js\"",
@@ -22,18 +22,13 @@
   "dependencies": {
     "a2-in-memory-web-api": "^0.1.17",
     "angular2": "2.0.0-beta.15",
-    "body-parser": "^1.15.1",
     "bootstrap": "^3.3.6",
-    "cookie-parser": "^1.4.1",
     "es6-shim": "^0.35.0",
-    "express": "^4.13.4",
     "lodash": "^4.12.0",
-    "morgan": "^1.7.0",
-    "ng2-charts": "^1.0.3",
+    "ng2-charts": "1.0.3",
     "ng2-material": "^0.3.7",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
-    "serve-favicon": "^2.3.0",
     "systemjs": "0.19.26",
     "zone.js": "^0.6.12"
   },
