--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "node_modules",
     "typings/main",
     "typings/main.d.ts",
-    "app"
+    "typings/browser",
+    "typings/browser.d.ts"
   ]
 }
