--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,6 @@
     "noImplicitAny": false
   },
   "exclude": [
-    "node_modules",
-    "typings/main",
-    "typings/main.d.ts",
-    "typings/browser",
-    "typings/browser.d.ts"
+    "node_modules"
   ]
 }
