--- a/package.json
+++ b/package.json
@@ -20,17 +20,30 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "a2-in-memory-web-api": "^0.1.17",
-    "angular2": "2.0.0-beta.15",
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.1",
+    "@angular/upgrade": "2.0.0-rc.1",
+    "@angular2-material/checkbox": "^2.0.0-alpha.4",
+    "@angular2-material/core": "2.0.0-alpha.4",
+    "@angular2-material/radio": "^2.0.0-alpha.4",
+    "@angular2-material/sidenav": "2.0.0-alpha.4",
+    "angular2-in-memory-web-api": "0.0.11",
     "bootstrap": "^3.3.6",
     "chance": "^1.0.3",
+    "es6-promise": "^3.0.2",
     "es6-shim": "^0.35.0",
     "lodash": "^4.12.0",
-    "ng2-charts": "1.0.3",
-    "ng2-material": "^0.3.7",
-    "reflect-metadata": "0.1.2",
+    "ng2-charts": "1.1.0",
+    "ng2-material": "0.5.0",
+    "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.26",
+    "systemjs": "^0.19.26",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
