--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "@angular/router": "2.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.1",
     "@angular/upgrade": "2.0.0-rc.1",
-    "@angular2-material/checkbox": "^2.0.0-alpha.4",
-    "@angular2-material/core": "2.0.0-alpha.4",
-    "@angular2-material/radio": "^2.0.0-alpha.4",
-    "@angular2-material/sidenav": "2.0.0-alpha.4",
+    "@angular2-material/checkbox": "^2.0.0-alpha.5-2",
+    "@angular2-material/core": "2.0.0-alpha.5-2",
+    "@angular2-material/radio": "^2.0.0-alpha.5-2",
+    "@angular2-material/sidenav": "2.0.0-alpha.5-2",
+    "@angular2-material/toolbar": "^2.0.0-alpha.5-2",
     "angular2-in-memory-web-api": "0.0.11",
     "bootstrap": "^3.3.6",
     "chance": "^1.0.3",
